--- a/Conditional/ExplainOurModels.tex
+++ b/Conditional/ExplainOurModels.tex
@@ -37,9 +37,7 @@ As a consequence of Proposition~\ref{prop:ca:transitiveConn}, a path graph $G = 
 
 Consequently, a path graph consists of \textit{binding} and \textit{predicate} cliques, i.e.\ vertices in a clique are either $\bc$-connected (making it a binding clique) or they are $\pc$-connected (making it a predicate clique). Note that a clique can be both $\bc$- and $\pc$-connected, in case a predicate has several identical arguments. In the following, we interpret such a clique as two different cliques.
 
-As the graph can be meaningfully partitioned into complete subgraphs, the vertices of each subgraph can simply be seen as a set, where each set overlaps with the others. Thus, the path graph $G = (V, E)$ can be 
-
-where $V$ is the vertex set and $E$ is the set of labelled edges becomes $HG = \left(V, E_H\right)$, where each member of $E_H$ is a set of vertices comprising either a binding or predicate clique in $G$ (labelled $\bc$ or $\pc$ respectively). Then, $HG$ describes a \emph{conformal hypergraph} (see e.g.\ \cite{bretto}), where $E_H$ is a set of hyperedges.
+As the graph can be meaningfully partitioned into complete subgraphs, the vertices of each subgraph can simply be seen as a set, where each set overlaps with the others. Thus, a path graph $G$ becomes $HG = \left(V, E_H\right)$, where each member of $E_H$ is a set of vertices comprising either a binding or predicate clique in $G$ (labelled $\bc$ or $\pc$ respectively). Then, $HG$ describes a \emph{conformal hypergraph} (see e.g.\ \cite{bretto}), where $E_H$ is a set of hyperedges.
 
 \begin{figure}
     \centering
@@ -65,25 +63,6 @@ where $V$ is the vertex set and $E$ is the set of labelled edges becomes $HG = \
     \end{subfigure}
     \caption{Figure of hypergraphs for example~\ref{ex:ca:hgma:disconnected}.}\label{fig:ex:ca:hgma:ex:disconnected}
 \end{figure}
-
-\begin{example}
-    \begin{align*}
-        & g_1 \bc m_1 \bc p_2 \pc p_1 \bc q_1 \\
-        & m_1 \bc g_1 \bc p_2 \pc p_1 \bc q_1
-    \end{align*}
-\end{example}
-
-% Formerly we defined binding sets as a theoretical set, however for practical application we require an exact model.
-%
-% For instance, earlier we made the assumption that ambiguous predicates would always match correctly, to get an idea of this problem
-% assume we have a precondition \{$p(x,y), p(z,x)$\}, if we designed the bindings as tuples $(p,(1,2),p)$ which is (predicate A, (variable position of A, variable position of B), predicate B).
-% Then as is evident this model will have two different interpretations either that there are two predicates like in our example or that there is one predicate with two bindings I.E. \{$p(x,x)$\}.
-% This could be solved by labeling each predicate with a number in no particular order  to indicate the origin predicate, thus $(p,(1,2),p)$ would become  $(p1,(1,2),p2)$ which would remove the dual interpretation.
-% However this creates a new issue: Since the numbering is non-deterministic another binding set might have used a different numbering for the predicates;
-% therefore without the assumption that the predicates always correctly match, meaning same numbering, two bindings that was equal could become be unequal. This becomes an issue with set intersection thus requiring us to redefine it.
-%
-%
-% This section will detail a new model for representing condition effects and bindings in particular, and it will explain how to utilize it for practical application of the theory.
 
 To summarize the our prior model for preconditions and effects we have the four following sets.
 \begin{description}
