--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -106,7 +106,7 @@ If $\gamma (S,a) \neq S$ and objects are interpreted as variables then $preconds
 
 \begin{proof}[\textbf{Proof by contradiction}] Lets assume that there are more preconditions than present in S for the effects E.
 	In this case the effects would not occur as their required preconditions are missing, thus the preconditions must be satisfied in S.
-	As such we can conclude S contains at least all precondition predicates.    \qedhere
+	As such we can conclude S contains at least all precondition predicates.    
 \end{proof}
 \end{theorem}
 
