--- a/Learning.tex
+++ b/Learning.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
 <\texttt{TODO:} Explain scientific learning, how to learn scientifically? >
-\section{Strategy}
+\section{Strategy}\label{sec:Strategy}
     \subfile{Learning/Strategy}
 \section{Algorithm}\label{sec:Algorithm}
     \subfile{Learning/Algorithm}
