--- a/NonConditional.tex
+++ b/NonConditional.tex
@@ -23,7 +23,7 @@ p \left( x_1, \dots, x_{|p|} \right)
     \section{Learning Preconditions}\label{sec:NC:Preconditions}
     \subfile{NonConditional/Preconditions}
 
-\section{Hypothesis construction}
+\section{Hypothesis construction}\label{sec:NC:hypcon}
 	\subfile{NonConditional/HypothesisConstruction}
 
 \end{document}
