--- a/Master.tex
+++ b/Master.tex
@@ -18,6 +18,7 @@
 \usepackage{enumitem}
 \usepackage{mathtools}
 \usepackage[toc,page]{appendix}
+\usepackage{cleveref}
 
 \hypersetup{
     colorlinks,
