--- a/Appendices/Results.tex
+++ b/Appendices/Results.tex
@@ -2,6 +2,8 @@
 \providecommand{\master}{..}
 \begin{document}
 
+% \VerbatimInput{\master/Plotting/statistics2} 
+
 \begin{figure}
     \centering
     \input{\master/Graphics/ek-move-h.pgf}
