--- a/Implementation/Results.tex
+++ b/Implementation/Results.tex
@@ -38,7 +38,13 @@ In contrast, solving the two training problems followed by the large one require
     \caption{Sokoban worlds used for training.}\label{fig:results:sokoTraining}
 \end{figure}
 
-In the source code bundled with this thesis, the program \texttt{Plotting/Statistics.hs} for interpreting and visually representing statistics files are included  (along with source code for generating most diagrams used in this thesis). 
+In the source code bundled with this thesis, the program \texttt{Plotting/Statistics.hs} for interpreting and visually representing statistics files are included  (along with source code for generating most diagrams used in this thesis). For each action schema mentioned in the statistics file, the program will output two line plots: one showing the effects the agent learned for the action, and one showing the corresponding preconditions.
+
+The generated plots for the \texttt{move-*} actions are presented in Figures~\ref{fig:res:ekmove} and~\ref{fig:res:pkmove}, with an explanation of how to read them. Plots for the other four sokoban actions are listed in Appendix~\ref{sec:app:results}.
+
+As can be seen in~\figref{fig:res:ekmoveh}, the agent will execute arbitrary \texttt{move-h} actions, untill it finds a valid one after 20 trials. When that happens, it immediately proves its two positive and negative effects, and disproved all others. In~\figref{fig:res:pkmoveh}, it can be seen that it builds up the set of candidates for each failing action application. Upon action success in step 21, it is able to disprove many positive preconditions and some negative ones, which in turn reduces two candidate sets to singletons, thus proving them.
+
+This pattern is very similar for the \texttt{move-v} action (see Figures~\ref{fig:res:ekmovev} and~\ref{fig:res:pkmovev}), except that its proves are delayed; in the first training problem, this action is never applicable, but that is unknown to the agent. It will attempt to apply the \texttt{move-v} action, and only succeed in finding cadidates. These candidates are not reduced untill the action succeeds in the second training problem. However, once the agent starts solving the second problem, the \texttt{move-v} action only requires three failed trials before success, as the condidates are used to limit the applicability of the action.
 
 \begin{figure}
     \centering
@@ -50,18 +56,20 @@ In the source code bundled with this thesis, the program \texttt{Plotting/Statis
         \resizebox{\linewidth}{!}{\input{\master/Graphics/statistics2-ek-move-v.pgf}}
         \caption{\texttt{move-v} effects}\label{fig:res:ekmovev}
     \end{subfigure}
+    \caption{Knowledge obtained about \emph{effects} of the \texttt{move-*} actions from solving the problems presented in~\figref{fig:results:sokoTraining}. The unit of the $y$-axis is number of ungrounded predicates, and the marker $\mathbb{F}_A$ denotes the maximum value. The $x$-axis is measured in experiments. For readability, the experiments where the relevant action was not the cause of failure are removed, as nothing is learned. The small black ticks denote a duration of 5 experiments, and the larger red ticks denote that a problem has been solved, and that a new one has started.}\label{fig:res:ekmove}
 \end{figure}
 
 \begin{figure}
     \centering
     \begin{subfigure}{0.42\linewidth}
         \resizebox{\linewidth}{!}{\input{\master/Graphics/statistics2-pk-move-h.pgf}}
-        \caption{\texttt{move-h} effects}\label{fig:res:pkmoveh}
+        \caption{\texttt{move-h} preconditions}\label{fig:res:pkmoveh}
     \end{subfigure}
     \begin{subfigure}{0.42\linewidth}
         \resizebox{\linewidth}{!}{\input{\master/Graphics/statistics2-pk-move-v.pgf}}
-        \caption{\texttt{move-v} effects}\label{fig:res:pkmovev}
+        \caption{\texttt{move-v} preconditions}\label{fig:res:pkmovev}
     \end{subfigure}
+    \caption{Knowledge obtained about \emph{preconditions} of the \texttt{move-*} actions from solving the problems presented in~\figref{fig:results:sokoTraining}. See~\figref{fig:res:ekmove} for an explanation of how to read the graph. Note that the candidate data is not measured in ungrounded predicates, but set cardinality.}\label{fig:res:pkmove}
 \end{figure}
 
 \end{document}
