--- a/Conditional/HyperGraphConstructionFromState.tex
+++ b/Conditional/HyperGraphConstructionFromState.tex
@@ -18,7 +18,7 @@ Recall that any two predicates $p$ and $q$ in $\Delta S$ with the same name are 
 
 In the following, we will assume availability of such a merging function (denoted $merge$), and a detailed algorithm can be found in Section~\ref{sec:C:HGMerging}.
 
-From the above, it follows that all grounded predicates with name $n$ in $\Delta\left(s, s'\right)$ can be merged together to disprove preconditions of the conditional that spawned them. The resulting hypergraph then constitutes all bindings that have not explicitly been disproven to be predicates, and can as such be reused in another transition. As such, this hypergraph describes the unknown knowledge $U$.
+From the above, it follows that all grounded predicates with name $n$ in $\Delta\left(s, s'\right)$ can be merged together to disprove preconditions of the conditional that spawned them. The resulting hypergraph then constitutes all bindings that have not explicitly been disproven to be predicates, and can as such be reused in another transition. This hypergraph describes the unknown knowledge $U$.
 
 As with connecting paths, we have the concept of candidates, i.e.\ reasons a conditional could have failed in a certain interpretation. Recall that such a reason is a connecting path that was not present in the failing state. Since vertices in a hypergraph can be uniquely identified, and paths to the effect can be described by a binding to another vertex that is itself transitively connected, a candidate for failure can be encoded as a tuple of two vertices. I.e.\ it is sufficient to record the last component of the offending connecting path.
 
@@ -32,7 +32,11 @@ Similarly to nonconditional actions and connection paths, a candidate is proven 
     \right\}
 \end{equation*}
 
-As each vertex in a hypergraph has unique identifiers, and identifiers for two hypergraphs are not necessarily identical, the $merge$ function must also perform an identifier renaming. Thus, the $reduce$ function ascribed above will not work, as the vertex identifiers will not match, and vertices in $U$ can not be matched with those in $K$. Therefore, $merge$ should return the renaming function used, so that it can be applied to $C$ and $K$.
+The set of knowns can now be seen as a set of tuples, consisting of candidate tuples which have been proven to be preconditoins. 
+
+% A more natural representation for this is simply a set of sets of vertices, each of which is a subset of a binding edge in $U$. Because of transitive connectivity property <ref>, it holds that if any two subsets of $K$ overlap, then they can be replaced by their union. A tuple $(u,v)$ proven to be a precondition can then be converted to the set $\{u,v\}$ and added to $K$, while unioning <better word for unioning> overlapping sets as described above.
+
+As each vertex in a hypergraph has unique identifiers, and identifiers for two hypergraphs are not necessarily identical, the $merge$ function must also perform an identifier renaming. Thus, the $reduce$ function ascribed above will not work with the merged $U$, as the vertex identifiers will not match, and vertices in $U$ can not be matched with those in $K$. Therefore, $merge$ should return the renaming function used, so that it can be applied to $C$ and $K$.
 
 As described in the next section, a vertex may have been ``shadowing'' another, such that what we perceived as a single vertex in a binding edge in $U$ were in fact two. If that is the case, the renaming function will replace that vertex with two equally-named vertices with different identfiers, both part of the binding edge the original vertex was part of. 
 
@@ -46,7 +50,21 @@ Thus, when this renaming is applied to a candidate tuple $(u,v)$, it produces $|
     \right\}
 \end{equation*}
 
-When the renaming is applied to a vertex $v \in K$, then it holds that if $|rn(v)| > 1$, neither of the vertices in $rn(v)$ are proven. \texttt{Explain}.
+A similar method is required for the set of proven preconditions $K$, with the added restriction that a tuple $\left( u', v' \right)$ (where $u'\in rn(u) \land v' \in rn(v)$ is only retained in $K$ if $|rn(u)| \times |rn(v)| = 1$. 
+
+\begin{equation*}
+    rnTuple\left( (u,v), rn \right) =
+    \left\{
+        \left( u', v' \right) \mid u' \in rn(u) \land v' \in rn(v)
+    \right\}
+\end{equation*}
+
+\begin{equation*}
+    rnProven(K, rn) =
+    \left\{
+        \left( u', v' \right) \mid
+    \right\}
+\end{equation*}
 
 \begin{algorithm}
     \caption{Algorithm for learning conditional effects using hypergraphs}\label{algo:CondEffLearn}
