--- a/Learning.tex
+++ b/Learning.tex
@@ -1,7 +1,7 @@
 \documentclass[Master.tex]{subfiles}
 \begin{document}
+	\subfile{Learning/introductionToLearning}
 
-<\texttt{TODO:} Explain scientific learning, how to learn scientifically? >
 \section{Strategy}
     \subfile{Learning/Strategy}
 \section{Algorithm}\label{sec:Algorithm}
