--- a/Discussion.tex
+++ b/Discussion.tex
@@ -7,7 +7,7 @@
 \section{Discussion of Results}
     \subfile{Discussion/DiscussionOfResults}
 
-\section{Planning}
+\section{Planning}\label{sec:disc:planning}
     \subfile{Discussion/Planning}
 
 \section{Hypergraph Collapsing}
