--- a/Learning.tex
+++ b/Learning.tex
@@ -7,8 +7,8 @@
 \section{Algorithm}\label{sec:Algorithm}
     \subfile{Learning/Algorithm}
 
-\section{PDDL}
-\subfile{Learning/PDDLWorld}
+\section{PDDL}\label{sec:PDDL}
+    \subfile{Learning/PDDLWorld}
 
 \section{Sokoban in PDDL}\label{sec:SokobanPDDL}
     \subfile{Learning/SokobanPDDL}
