--- a/Master.tex
+++ b/Master.tex
@@ -105,10 +105,9 @@
     \subfile{Implementation}
 
 \chapter{Discussion}\label{chp:dis}
+    \subfile{Discussion}
 
 \chapter{Conclusion}
-
-\chapter{Future work}
 
 \begin{appendices}
     \chapter{Results}\label{sec:app:results}
