--- a/Learning/introductionToLearning.tex
+++ b/Learning/introductionToLearning.tex
@@ -1,10 +1,17 @@
 \documentclass[../Master.tex]{subfiles}
 \begin{document}
 	
-	Learning is defined by the oxford dictionary as 
-	\begin{quotation}
+	Learning is defined by the Oxford dictionary as 
+	\begin{quote}
 		The acquisition of knowledge or skills through study, experience, or being taught.
-	\end{quotation}
+	\end{quote}
+	
+	This definition is based on a very human way of understanding learning, as it groups the concept of skills and knowledge together.
+	However acquiring skills often means to train or practice such that one is efficient. For instance a driver may learn to be better at operating his vehicle, not through realizing some but rather by doing it repeatedly until he has built his muscle memory.
+	Such learning in a purely logical sense is what we will define as learning but rather just an optimization of the access time of the knowledge.
+	Therefore we will keep to the notion that \textbf{Learning is the acquisition of knowledge}.
+	
+	The foundation for this thesis is based on the article \cite{Walsh2008},
 	
 	
 	
