--- a/Learning/Strategy.tex
+++ b/Learning/Strategy.tex
@@ -22,8 +22,6 @@
 
     \section*{Learning Strategies}\label{sec:strats}
 
-    In the initial state of an agent it will know nothing, thus it must
-    test and try in order to understand what it is capable of. Furthermore, because an agent has limited resources it cannot test everything it must decide what to test and what to accept remaining ignorant about, we define these as the learning strategies of an agent.
 
 	In our analysis of agent learning strategies we have found there are different traits that exists between all strategies, and some of the traits do tend to oppose each other thus by looking at the extreme cases we can get an understanding of where they are useful and in what situations. In~\cite{Walsh2008} two such strategies are provided:
     \begin{itemize}
@@ -52,7 +50,7 @@
 	
 	\begin{definition}
     [{Self-sufficient/Help-seeking}] We define a strategy which favors
-    or completely relies on a teacher assisting it as a Help-seeking strategy
+    or completely relies on a teacher assisting it as a Help-seeking\footnote{The term help-seeking is coined by \cite{Gall1981224}} strategy
     and a strategy which does not as a self-sufficient strategy. While
     the term Help-seeking carry a negative connotation, it is not necessarily
     a bad strategy, for instance if the agent operates in an environment
