--- a/refs.bib
+++ b/refs.bib
@@ -88,3 +88,31 @@ abstract = "We describe a new problem solver called \{STRIPS\} that attempts to 
   year = {2013},
   isbn = {3319000802, 9783319000800, 9783319000794}
 }
+@article{tobias1990a,
+	title = {LEARNING-STRATEGIES AND LEARNING STYLES - SCHMECK,RR},
+	language = {English},
+	publisher = {AMER PSYCHOLOGICAL ASSOC},
+	author = {Tobias, S.},
+	journal = {CONTEMPORARY PSYCHOLOGY},
+	volume = {35},
+	number = {4},
+	pages = {389-390},
+	year = {1990},
+	issn = {00107549}
+}
+@article{Gall1981224,
+	title = "Help-seeking: An understudied problem-solving skill in children ",
+	journal = "Developmental Review ",
+	volume = "1",
+	number = "3",
+	pages = "224 - 246",
+	year = "1981",
+	note = "",
+	issn = "0273-2297",
+	doi = "http://dx.doi.org/10.1016/0273-2297(81)90019-8",
+	url = "http://www.sciencedirect.com/science/article/pii/0273229781900198",
+	author = "Sharon Nelson-Le Gall",
+	abstract = "Traditional approaches to the study of young children's behavior in helping relationships are examined and criticized as inadequate because they have failed to represent the child's perspective from the role of “active helpee” (i.e., help-seeker in such relationships). By failing to look at helping from the perspective of the one who seeks help, researchers have neglected to pursue an important lead in understanding why some children are able to learn and progress independently when confronted with the same obstacles that serve to defeat other children. This article focuses on instrumental help-seeking defined as an active, complex social-cognitive activity that is essential to learning and achievement. In the first sections of this article, it is argued that instrumental help-seeking can be formally distinguished from passive dependency as well as from the actual giving and receiving of help. In following sections, a heuristic model of the help-seeking process is offered, prior research relevant to the model is reviewed, and ideas for research on help-seeking in children are suggested within the framework of this model. "
+}
+
+
