Converted to DTU style

--- a/Learning/SokobanPDDL.tex
+++ b/Learning/SokobanPDDL.tex
@@ -1,9 +1,10 @@
 \documentclass[../Master.tex]{subfiles}
+\providecommand{\master}{..}
 \begin{document}
 
 \begin{figure}
     \centering
-    \includegraphics[scale=0.7]{../Graphics/soko1}
+    \includegraphics[scale=0.7]{\master/Graphics/soko1}
     \caption{\label{fig:simpleSokoban} <\texttt{TODO:} redraw, one tile too many, label tiles> A simple sokoban world. The circle is the sokoban, the squares are crates, and the dashed lines denote goal tiles.}
 \end{figure}
 
