--- a/Master.tex
+++ b/Master.tex
@@ -1,36 +1,34 @@
-\documentclass[english]{report}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{luainputenc}
-\usepackage{amsthm}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage[english]{babel}
+%==================================================================================================
+%   LUKES THESIS TEMPLATE 1.2
+%   -------------------------
+%   This template is based upon the offcial IMM PhD Thesis template, it is enhanced with a number
+%   of new features and a number of errors have fixed. This template is intended to be complied to
+%   PDF using PDFLATEX and is tested using the MiKTeX 2.9 LaTeX distribution.
+%   It is based on the official DTU-IMM Thesis template by Finn Kuno Christensen in 2009.
+%   Small bugfixes by Kasper Laursen in 2012 and 2013.
+%   Small updates by Finn Kuno Christensen/Henning Christiansen in 2015.
+%   -------------------------
+%   Last Updated: 2015-01-08
+%==================================================================================================
+%
+%==================================================================================================
+% DOCUMENT SETUP
+%==================================================================================================
+\documentclass[10pt,twoside]{book}                  %Official DTU-IMM Thesis document setup
+%
+%Set to 'print' for printed version, use 'net' for online version
+\def\thesisversion{print}
+%
+%==================================================================================================
+% PACKAGES
+%==================================================================================================
+\usepackage{LukeThesis}                             %Import Thesis base style
 \usepackage{subfiles}
-\usepackage{cite}
-\usepackage[noend]{algpseudocode}
 \usepackage{algorithm}
-\usepackage{graphicx}
-\usepackage{paralist}
-\usepackage{caption}
-\usepackage{hyperref}
-\usepackage[ampersand]{easylist}
+\usepackage[noend]{algpseudocode}
 \usepackage{subcaption}
 \usepackage{enumitem}
-\usepackage{mathtools}
-\usepackage[toc,page]{appendix}
-\usepackage{fancyvrb}
 
-\hypersetup{
-    colorlinks,
-    citecolor=black,
-    filecolor=black,
-    linkcolor=black,
-    urlcolor=black
-}
-
-\captionsetup{justification=justified,singlelinecheck=false}
-\newcommand{\figref}[1]{\figurename~\ref{#1}}
-\newcommand\defeq{\stackrel{\mathclap{\normalfont\mbox{def}}}{=}}
 \usepackage{tikz}
 \usetikzlibrary{topaths,calc}
 \usetikzlibrary{positioning}
@@ -46,18 +44,33 @@
 	{not}{$\neg$}{1}
 }
 
-\makeatletter
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
-  \theoremstyle{definition}
-  \newtheorem{definition}{Definition}[chapter]
-  \theoremstyle{plain}
-  \newtheorem{example}{Example}[section]
-  \newtheorem{theorem}{Theorem}[chapter]
-  \newtheorem{proposition}{Proposition}[chapter]
-  \newtheorem{invariant}{Invariant}[chapter]
-  \newtheorem{lemma}{Lemma}[chapter]
-\makeatother
+%
+%==================================================================================================
+% THESIS PROPERTIES (Modifiy these fields with your details)
+%==================================================================================================
+\def\thesisauthor{Soren Jacobsen and Jannick Johnsen}                     %Author
+\def\thesistitle{Action Learning in Automated Planning}               %Title
+\def\thesishandin{26-July}                       %Submission date (Day-Month}
+\def\thesisdegree{M.Sc.}                              %Degree ('B.Eng', 'B.Sc.', 'M.Sc.' or 'PhD')
+\def\thesisyear{2015}                               %Submission year
+\def\thesisnumber{????}                             %DTU-IMM Serial number (do not include year)
+\def\thesisISSN{0000-0000}                          %ISSN number
+\def\thesiskeywords{Keywords are, comma separated}  %PDF keywords
+\derivethesisprops                                  %Derive dependent properties
+%
+%==================================================================================================
+% SECTION NUMBERING SETUP
+%==================================================================================================
+\setcounter{tocdepth}{2}                            %2 adds sections up to subsections
+\setcounter{secnumdepth}{3}                         %Subsubsections get a number when this is 3
+%
+%==================================================================================================
+% THESIS STRUCTURE  (Modifiy to include more chapters etc)
+%==================================================================================================
 
+\newtheorem{invariant}{Invariant}[chapter]
+
+\newcommand{\figref}[1]{\figurename~\ref{#1}}
 
 % symbol used for function calculating total state
 \newcommand{\ts}{X}
@@ -67,28 +80,41 @@
 % Symbol for a binding connection
 \newcommand{\bc}{\bullet}
 
-\renewcommand{\algorithmicrequire}{\textbf{input:}}
-\renewcommand{\algorithmicensure}{\textbf{output:}}
-
-\usepackage{babel}
-
-\title {Automated Learning}
-\author {Søren Jacobsen \and Jannick Johnsen}
-
 \begin{document}
-
 \newcommand{\master}{.}
-\graphicspath{{Graphics/}}
-
-\maketitle
-
-\begin{abstract}
-    <Insert abstract here>
-\end{abstract}
-
+%------------------------
+%Pre-frontmatter material
+%------------------------
+\prefrontmatter
+%--------------------
+%Frontmatter material
+%--------------------
+\frontmatter
+\pagenumbering{roman}                               %Set frontmatter numbering style
+\input{SummaryUK}                                   %English summary of Thesis
+\markboth{}{}                                       %Set headings (left)(right)
+\input{SummaryDK}                                   %Danish summary of Thesis
+\markboth{}{}                                       %Set headings (left)(right)
+\input{Preface}                                     %Preface
+\markboth{}{}                                       %Set headings (left)(right)
+\input{Acknowledgements}                            %Acknowledgements
+\markboth{}{}                                       %Set headings (left)(right)
+%------------------
+% Table of contents
+%------------------
+\newpage\mbox{}\newpage
+\chaptermark{Contents}
+\pdfbookmark{\contentsname}{toc}
+\renewcommand{\sectionmark}[1]{\markright{#1}}
+\sectionmark{Contents}
+\addtolength{\parskip}{-\baselineskip}
 \tableofcontents
-\listofalgorithms
-
+\addtolength{\parskip}{\baselineskip}
+\renewcommand{\sectionmark}[1]{\markright{\thesection\ #1}}
+%-------------
+% Main content
+%-------------
+\mainmatter
 \chapter{Introduction}
 	\subfile{Introduction}
 
@@ -109,12 +135,18 @@
 
 \chapter{Conclusion}
 
-\begin{appendices}
-    \chapter{Results}\label{sec:app:results}
-        \subfile{Appendices/Results}
-\end{appendices}
-
-\bibliography{refs}{}
-\bibliographystyle{apalike}
-
+\appendix
+\chapter{Results}\label{sec:app:results}
+    \subfile{Appendices/Results}
+%-----------
+% Backmatter
+%-----------
+\backmatter
+\chaptermark{Bibliography}
+\renewcommand{\sectionmark}[1]{\markright{#1}}
+\sectionmark{Bibliography}
+\addcontentsline{toc}{chapter}{Bibliography}        %Force addition of Bibliography to TOC
+\bibliographystyle{alpha}                           %Use alpha codes for references
+\bibliography{refs}                           %Bibliography file called
 \end{document}
+% % % EOF % % %
