Added cleveref package

--- a/Master.tex
+++ b/Master.tex
@@ -28,6 +28,7 @@
 \usepackage[noend]{algpseudocode}
 \usepackage{subcaption}
 \usepackage{enumitem}
+\usepackage{cleveref}
 
 \usepackage{tikz}
 \usetikzlibrary{topaths,calc}
