--- a/Master.tex
+++ b/Master.tex
@@ -49,7 +49,7 @@
 %==================================================================================================
 % THESIS PROPERTIES (Modifiy these fields with your details)
 %==================================================================================================
-\def\thesisauthor{Soren Jacobsen and Jannick Johnsen}                     %Author
+\def\thesisauthor{Søren Jacobsen and Jannick Johnsen}                     %Author
 \def\thesistitle{Action Learning in Automated Planning}               %Title
 \def\thesishandin{26-July}                       %Submission date (Day-Month}
 \def\thesisdegree{M.Sc.}                              %Degree ('B.Eng', 'B.Sc.', 'M.Sc.' or 'PhD')
