--- a/Discussion/ImplOverview.tex
+++ b/Discussion/ImplOverview.tex
@@ -6,7 +6,7 @@ Most of the algorithms and methods discussed in this thesis have been implemente
 
 \begin{description}
     \item[Non-conditional learning] 
-        The methods and algorithms from Section~\ref{sec:NC:Effects} and~\ref{sec:NC:Preconditions} have been fully implemented and tested.
+        The methods and algorithms from Section~\ref{sec:NC:Effects} and~\ref{sec:NC:Preconditions} have been fully implemented and tested. Additionally, these have support for typed variables and objects (see~\cite{PDDL}), thus reducing the search space.
     \item[General algorithm]
         The algorithm based on the scientific method (see Section~\ref{sec:Algorithm}) have been implemented, and the data structures it uses have been implemented in an abstract fashion, so that they may be used for wildly different domains. Especially, the PDDL-specificities discussed in Section~\ref{sec:PDDLAlgo} have been implemented to instatntiate the algorithm.
     \item[Optimistic and pessimistic strategies]
