Moved PDDL intro to appendix

--- a/Learning.tex
+++ b/Learning.tex
@@ -7,11 +7,11 @@
 \section{Algorithm}\label{sec:Algorithm}
     \subfile{Learning/Algorithm}
 
-\section{PDDL}\label{sec:PDDL}
-    \subfile{Learning/PDDLWorld}
-
-\section{Sokoban in PDDL}\label{sec:SokobanPDDL}
-    \subfile{Learning/SokobanPDDL}
+% \section{PDDL}\label{sec:PDDL}
+%     \subfile{Learning/PDDLWorld}
+%
+% \section{Sokoban in PDDL}\label{sec:SokobanPDDL}
+%     \subfile{Learning/SokobanPDDL}
 
 \section{PDDL-specific algorithm}\label{sec:PDDLAlgo}
     \subfile{Learning/PDDLAlgorithm}
