--- a/Master.tex
+++ b/Master.tex
@@ -137,6 +137,8 @@
 \chapter{Conclusion}
 
 \appendix
+\chapter{PDDL}\label{sec:app:pddl}
+    \subfile{Appendices/PDDL}
 \chapter{Results}\label{sec:app:results}
     \subfile{Appendices/Results}
 %-----------
