--- a/Introduction.tex
+++ b/Introduction.tex
@@ -2,18 +2,19 @@
 \begin{document}
 
 
-	Within the field of AI most studies are based on 
-	machine learning and statistical analysis. And while those are good approaches
-	to achieve a learning agent, it does not broaden our understanding of what it means to learn.
-	What we mean by this is: How can we perform an experiment and know exactly what we have learned from it, 
-	and how we can use this knowledge to develop further experiments highlighting another aspect of the domain we are trying to learn.
+	What does it mean to learn? This is an important question to raise within the subject of artificial intelligence.
+	In science we learn and discover something new everyday, as such we have built frameworks for how this learning and discovery should be conducted. From this we believe that by building on already fundamental scientific methods, we may simplify how an artificial intelligence should learn.
+	
+	The first question we should ask ourselves is: How can we perform an experiment and know exactly what we have learned from it, 
+	and how we can use this knowledge to develop further experiments highlighting another aspect of the field we are trying to learn.
 	Both of these questions turns out to be very interesting when it comes to AI learning.
-	In reality AI learning is no different from scientific learning, as we are all agents occupying the current universe we exist in.
+	
 	This means that research done on science and scientific understanding is equally relevant in the context of making an agent able to learn.
 	As some of these concepts are greater than we are able to cover in this thesis, we have decided to limit ourselves to just planning domains.	 
 	Planning as a field of study deals with the idea that an agent knows what it is capable of, 
 	and from there must be able to achieve a desired goal. 
-	We wish to look at the problem from the opposite side, what if an agent knows nothing it is capable of and instead must learn through induction what it can achieve. This parallels the experience of an infant, when it initially is brought into the world. Ignoring genetic memory such an infant should have no prior knowledge, and therefore must use inductive reasoning to begin to understand how it can act upon its environment. For each action it takes the more knowledge it will have of its capabilities, however only through failures it may learn its limitations this is a provable fact.
+	We wish to look at the problem from the opposite side, what if an agent knows nothing it is capable of and instead must learn through induction what it can achieve. 
+	This is interesting as it parallels the experience of an infant, when it is initially born  --- ignoring genetic memory --- such an infant should have no prior knowledge, and therefore must use inductive reasoning to begin to understand how it can act upon its environment. For each action it takes the more knowledge it will have of its capabilities, however only through failures may it learn its limitations this is a provable fact.
 	 
 	
 	
